scss/partials/_menu.scss
div.menu {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  overflow: visible;
  padding: 24px;
  text-transform: none;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 156};

  @include mobile() {
    position: absolute;
    padding: 0;
  }

  &.dropdown-menu {
    letter-spacing: 0em;
  }

  button.modal-close-bt {
    position: absolute;
    right: 336px;
    top: 12px;

    @include mobile() {
      display: none;
    }
  }

  &.expanded-user-menu {
    div.menu-container {
      @include mobile() {
        display: block;
        opacity: 1;
      }
    }
  }

  div.menu-container {
    width: 320px;
    background-color: white;
    position: absolute;
    top: 0;
    height: 100vh;
    right: 0;
    padding: 0 24px 16px;
    transition: right 180ms ease-in;
    overflow-x: hidden;
    overflow-y: auto;

    @include mobile() {
      top: 0;
      left: unset;
      right: 0;
      width: 85vw;
      height: 100vh;
      border: none;
      box-shadow: none;
      transition: 230ms;
      display: block;
      text-align: left;
      background-color: $grey_num_2;
      display: none;
      opacity: 0;
      padding: 0 16px;
      -webkit-overflow-scrolling: touch;
    }

    div.menu-header {
      width: calc(100% + 48px);
      height: 56px;
      margin-left: -24px;
      background-color: $grey_num_2;
      padding: 12px 16px 12px 24px;
      margin-bottom: 24px;

      @include mobile() {
        height: #{$mobile_navbar_height}px;
        position: relative;
        border-bottom: 1px solid $ultra_light_grey;
        background-color: $grey_num_2;
        padding: 18px 16px 18px 24px;
      }

      button.mobile-close-bt {
        display: none;

        @include mobile() {
          display: block;
          position: absolute;
          right: 10px;
          top: 18px;
          width: 24px;
          height: 24px;
          padding: 0;
          background-image: cdnUrl("/img/ML/cmail_fullscreen_close.svg");
          background-size: 12px 12px;
          background-position: center;
          background-repeat: no-repeat;
        }
      }

      @include user-profile(32);

      @include mobile() {
        @include user-profile(24);
      }

      div.user-avatar-img-container {
        float: right;
        @include mobile() {
          float: left;
        }
      }

      div.user-name {
        @include OC_Body_Bold();
        font-size: 14px;
        color: $deep_navy;
        line-height: 32px;
        float: left;

        @include mobile() {
          margin-left: 8px;
          font-size: 16px;
          line-height: 24px;
        }
      }
    }

    div.oc-menu-separator {
      height: 1px;
      background-color: $ultra_light_grey;
      margin: 16px 0;

      @include mobile() {
        margin: 24px 0;
      }
    }

    a {
      display: block;
      background-color: transparent;
      padding: 0px;
      @include OC_Body_Book();
      font-size: 14px;
      line-height: 18px;
      color: $light_navy;
      text-align: left;
      margin: 16px 0;

      @include big_web() {
        &:hover {
          opacity: 1;
        }
      }
    }

    @include mobile() {
      // Remove the last bottom line on mobile
      & > *:last-child div.oc-menu-item:after{
        display: none;
      }
    }

    div.oc-menu-item {
      padding: 0;
      position: relative;
      @include OC_Body_Book();
      font-size: 14px;

      &.whats-new {
        #HW_badge_cont {
          display: inline;
        }
        #HW_badge {
          top: 1px;
          width: 16px;
          height: 16px;
          background-color: $carrot_green;
          border-radius: 4px;
        }
      }
    }
  }
}

